add new markers

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <h1>Mapbox</h1>
     <button id="fly-to-location">Fly to Enigma</button>
+    <button id="add-new-markers">Add Pools</button>
     <!-- mapbox element -->
     <div id='map' style='width: 100%; height: 800px;'></div>
     <!-- attach javascript -->
